[package]
name = "mohyung"
version = "0.1.0"
edition = "2021"
description = "Snapshot and restore node_modules as a single SQLite file"
license = "MIT"
repository = "https://github.com/cbcruk/mohyung"

[[bin]]
name = "mohyung"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
flate2 = "1.0"
rayon = "1.10"
walkdir = "2"
indicatif = "0.17"
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
predicates = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
